<resources>
    <string name="app_name">Cinepedia</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="app_introduce">This application was created to help you update information about the movie that is premiered and can set reminders for your favorite movie.</string>
    <string name="email_address">Email Address\n</string>
    <string name="password">Password\n</string>
    <string name="login">Login\n</string>
    <string name="register">Register\n</string>
    <string name="goToLogin">Already have an account? Login</string>
    <string name="change_my_password">Change My Password</string>
    <string name="your_old_password">Your old password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="change">Change password</string>
    <string name="new_password">New password (8 to 14 characters)</string>
    <string name="sample_name">Ex: Danny</string>
    <string name="movie">Movie</string>
    <string name="favorite">Favorite</string>
    <string name="setting">Setting</string>
    <string name="recommend_for_you">Recommend for you</string>
    <string name="change_view">Change view</string>
    <string name="search">Search</string>
    <string name="example_email">Ex: Example@gmail.com</string>
    <string name="disable_account">Disable Account</string>
    <string name="enable_account">Enable Account</string>
    <string name="terminate_account">Terminate Account</string>
    <string name="example_gender">Gender: Male</string>
    <string name="example_birthday">Birthday: 20/07/2001</string>
    <string name="example_time_created">Time Created: 2024–12–02 23:03:04</string>
    <string name="example_time_lastLogin">Last login time: 2024-12-01 23:03:04</string>
    <string name="dialog_question"><![CDATA[Where to watch :>]]></string>
    <string name="cancel_btn">Cancel</string>
    <string name="save_btn">Save</string>
    <string name="male_gender">Male</string>
    <string name="female_gender">Female</string>
    <string name="gender">Gender:</string>
    <string name="please_verify_your_email">Please verify your email:</string>
    <string name="search_by_name">Search by name</string>
    <string name="welcome_back">Welcome Back!\n</string>
    <string name="avatar_title">Choose avatar</string>
    <string name="avatar_message">Do you want to use the camera for the avatar?</string>
    <string name="positive_choice">Yes</string>
    <string name="negative_choice">No, use image from gallery</string>
    <string name="message_if_the_favorite_list_Empty">Make your watch list and I will do the rest :>\n (Next time you log in)</string>
</resources>