<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.ChangePasswordFragment"
    android:background="@drawable/register_background">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:gravity="center"
        app:title="Password Center"
        app:titleTextColor="@color/white" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginHorizontal="10dp"
        app:cardCornerRadius="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/change_my_password"
                android:textSize="30dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/frg_password_oldPwd"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="40dp"
                android:hint="@string/your_old_password"
                android:textSize="15sp"
                android:inputType="textPassword"/>


            <EditText
                android:id="@+id/frg_password_newPwd"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="20dp"
                android:hint="@string/new_password"
                android:textSize="15sp"
                android:inputType="textPassword"/>

            <EditText
                android:id="@+id/frg_password_confirmNewPwd"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="20dp"
                android:hint="@string/confirm_new_password"
                android:textSize="15sp"
                android:inputType="textPassword"/>

            <Button
                android:id="@+id/frg_password_change_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/change"
                android:textStyle="bold"
                />

            <Button
                android:id="@+id/frg_password_cancel_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/cancel_btn"
                android:textStyle="bold"
                />

        </LinearLayout>

    </androidx.cardview.widget.CardView>


</FrameLayout>